--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@hono/standard-validator": "^0.1.5",
     "@hono/swagger-ui": "^0.5.2",
     "@hono/zod-openapi": "^1.1.2",
+    "better-auth": "^1.3.13",
     "dotenv": "^17.2.2",
     "dotenv-expand": "^12.0.3",
     "drizzle-orm": "^0.44.5",
+    "form-data": "^4.0.4",
     "hono": "^4.9.8",
     "hono-openapi": "^1.0.8",
     "hono-pino": "^0.10.2",
+    "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "pino": "^9.10.0",
     "pino-pretty": "^13.1.1",
@@ -30,6 +33,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.19.17",
+    "@types/nodemailer": "^7.0.1",
     "@types/pg": "^8.15.5",
     "drizzle-kit": "^0.31.4",
     "eslint": "^8.57.1",
