--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ NODE_ENV=development
 PORT=5000
 LOG_LEVEL=debug
 DATABASE_URL=""
+# npx @better-auth/cli@latest secret
+BETTER_AUTH_SECRET=""
+BETTER_AUTH_URL=""
+EMAIL_USER=""
+EMAIL_PASS=""
