--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ BETTER_AUTH_SECRET=""
 BETTER_AUTH_URL=""
 EMAIL_USER=""
 EMAIL_PASS=""
+
+ZERODHA_BASE_URL=https://api.kite.trade,
+ZERODHA_API_KEY="",
+ZERODHA_API_SECRET="",
